fix for #1347 (google maps display issue) while maintaining fix for #1232 (extra long trip summary overflows into other tabs when it should be hidden)

--- a/templates/beez/css/template.css
+++ b/templates/beez/css/template.css
@@ -791,4 +791,4 @@ fieldset.only { display: none; }
 
 /* hidden */
 .hide { display: none; }
-.ui-tabs .ui-tabs-hide { display: none; }
+.ui-tabs .ui-tabs-hide p { display: none; }
